# llm-eval-engine

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: METRICS_TRUST.md  SECOND_RATER_PROTOCOL.md  calibration_snapshot_20260713.md  calibration_snapshot_20260716.md  calibration_snapshot_20260716_live.md  calibration_snapshot_20260716_offline.md  second_rater_worksheet.md
examples/: calibration_demo.py  quickstart.py  run_calibration.py
reports/: calibration_report_20260713.json  calibration_report_20260716.json  calibration_report_20260716_live.json  calibration_report_20260716_offline.json
src/eval_engine/: __init__.py  __main__.py
src/eval_engine/core/: contract.py  dynamic_rubric.py  process_reward.py  trajectory_parser.py
src/eval_engine/dataset/: __init__.py
src/eval_engine/dataset/data/: calibration_human_judge.json
src/eval_engine/gates/: __init__.py  baseline.py  regression_gate.py
src/eval_engine/intent/: __init__.py  classifier.py
src/eval_engine/judge/: __init__.py  calibration.py  executor.py  template_loader.py
src/eval_engine/judge/templates/: faithfulness.yaml  tool_selection.yaml  trajectory_safety.yaml
src/eval_engine/loop/: __init__.py  eval_loop.py  fix_packer.py
src/eval_engine/observability/: __init__.py  report.py
src/eval_engine/safety/: __init__.py  human_in_the_loop.py
tests/: __init__.py  conftest.py  test_calibration.py  test_core.py  test_gates.py  test_judge_executor.py  test_process_reward.py  test_real_judge.py  test_template_loader.py
