[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-engine"
version = "0.1.0"
description = "Experimental LLM evaluation framework with Process Reward scoring, dynamic rubric generation, adaptive eval loop, and human-in-the-loop oversight."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Guo Weihua"},
]
keywords = ["llm", "evaluation", "eval", "process-reward", "agent", "scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
judge = [
    "requests>=2.28",
]
dev = [
    "mypy>=1.8",
    "pip-audit>=2.6",
    "types-requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eval_engine = [
    "dataset/data/*.json",
    "judge/templates/*.yaml",
    "gates/baselines/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
allow_untyped_defs = true
allow_incomplete_defs = true
disable_error_code = [
    "arg-type",
    "assignment",
    "var-annotated",
    "misc",
    "type-var",
    "operator",
    "return-value",
]
files = ["src/eval_engine"]
